--- a/index.css
+++ b/index.css
@@ -266,7 +266,7 @@ padding: 3px;
     object-fit: contain;
     width: 300px;
     height: 300px;
-    box-shadow: 2px 2px 5px 4px rgba(0, 0, 0, 0.267);
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.096);
     border-radius: 5px;
     cursor: pointer;
 }
@@ -351,7 +351,7 @@ padding: 3px;
 
     display: grid;
    grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-   gap: 30px;
+   gap: 50px;
 }
 .our-players-conatiner .sub-players .our-players-imgs .playerDetails{
     display: flex;
@@ -370,7 +370,7 @@ padding: 3px;
     object-fit: contain;
     height: 250px;
      border-radius: 5px;
-     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.322);
+     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.11);
 }
 .our-players-conatiner .sub-players .our-players-imgs a{
     color: var(--back-500);
@@ -401,7 +401,7 @@ padding: 3px;
 
     display:grid;
     grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-    gap: 20px;
+    gap: 50px;
    
 } 
 .our-activity-conatiner .sub-activity .our-activity-imgs a{
@@ -413,7 +413,7 @@ padding: 3px;
     object-fit: contain;
     height: 250px;
      border-radius: 5px;
-     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.322);
+     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.075);
 }
 
 .our-activity-conatiner .sub-activity .our-activity-imgs .activityDetails {
@@ -651,14 +651,23 @@ padding: 3px;
 }
 
 @media screen and (max-width:600px){
+    
     .gallery-conatiner .sub-gallery .gallery .galllery-img img{
 
-        object-fit: cover;
+        object-fit: contain;
         width: 100%;
         height: 300px;
         /* box-shadow: 2px 2px 5px 4px rgba(0, 0, 0, 0.267); */
         border-radius: 5px;
         cursor: pointer;
+    }
+    .gallery-popap .gallery-close{
+        position: absolute;
+        right: 10%;
+        top: 30%;
+        font-size: 30px;
+        cursor: pointer;
+        color: var(--close-btn);
     }
     .gallery-conatiner .sub-gallery .gallery{
         width: 100%;
@@ -670,8 +679,28 @@ padding: 3px;
         gap: 20px;
     
     }
+    .sports-title .sports-text{
+        position: absolute;
+        top: 8px;
+        left: 20px;
+        
+    
+    }
+   
+    
     .sports-title .sports-text h2 {
         font-size: 28px;
-        font-weight: 300;
+        font-weight: 700;
     }
+    .our-players-conatiner .sub-players .our-players-imgs .playerDetails h2{
+        font-weight: 500;
+        font-size: 20px;
+        text-transform: capitalize;
+    }
+    .our-activity-conatiner .sub-activity .our-activity-imgs .activityDetails h2{
+        font-weight: 500;
+        font-size: 20px;
+        text-transform: capitalize;
+    }
+    
 }
